--- a/ScoringSystem/ScoringSystem/Properties/Resources.resx
+++ b/ScoringSystem/ScoringSystem/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="BigBong" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BigBong.wav;System.IO.MemoryStream, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Reggg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Reggg.wav;System.IO.MemoryStream, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
